Remove parallax effect and fixed background on mobile safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1199,7 +1199,7 @@ section.video {
 */
 
 .download {
-  background: url(../images/download_bg.jpg) no-repeat fixed;
+  background: url(../images/download_bg.jpg) no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
